--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,10 +10,11 @@
 a, a:visited, a:hover {
 	cursor: pointer;
 	color: inherit;
+	text-decoration: none;
 }
 
 md-menu-content {
-	min-width: 200px;
+	min-width: 160px;
 }
 
 .header {
