--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,6 +18,12 @@ md-menu-content {
 }
 
 .header {
+	.menu-image {
+		height: 40px;
+		width: auto;
+		padding-left: 10px;
+	}
+
 	.menu-item {
 		padding: 0 10px;
     font-size: 16px;
