--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,1 +1,10 @@
-<div>home</div>
+<div class="home-page-container">
+	<div class="image-slider-container">sliding image scroller here</div>
+
+	<div class="social-bar-container" layout="row" layout-align="center center"y>
+		<a class="social-bar facebook-bar" href="https://www.facebook.com/illinoisxctrackclub/"><i class="ion-social-facebook"></i></a>
+		<a class="social-bar twitter-bar" href="https://twitter.com/IlliniTrackClub"><i class="ion-social-twitter"></i></a>
+		<a class="social-bar instagram-bar" href=""><i class="ion-social-instagram-outline"></i></a>
+		<a class="social-bar youtube-bar" href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow"><i class="ion-social-youtube"></i></a>
+	</div>
+</div>
