--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,15 @@ $white: #FFF;
   padding: 0;
 }
 
+body {
+	height: 100%;
+
+	.wrapper {
+		min-height: 100%;
+		position: relative;
+	}
+}
+
 a, a:visited, a:hover {
 	cursor: pointer;
 	color: inherit;
@@ -18,6 +27,24 @@ a, a:visited, a:hover {
 
 md-menu-content {
 	min-width: 160px;
+}
+
+.centered-content {
+	max-width: 1000px;
+	margin: 0 auto;
+}
+
+.padded-content {
+	padding: 10px;
+}
+
+.page-container {
+	padding-top: 64px;
+	padding-bottom: 200px;
+}
+
+.right-align {
+	text-align: right;
 }
 
 .header {
@@ -37,17 +64,18 @@ md-menu-content {
 	}
 }
 
-.centered-content {
-	max-width: 1000px;
-	margin: 0 auto;
-}
+.footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	background-color: #F5731B;
+	color: $white;
+	height: 200px;
 
-.padded-content {
-	padding: 10px;
-}
-
-.page-container {
-	padding-top: 64px;
+	.footer-logo {
+		font-size: 36px;
+		padding: 0 25px;
+	}
 }
 
 .home-page-container {
