--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -43,6 +43,11 @@ md-menu-content {
 	padding-bottom: 200px;
 }
 
+.page-title {
+	font-size: 52px;
+	font-weight: 300;
+}
+
 .right-align {
 	text-align: right;
 }
@@ -121,5 +126,32 @@ md-menu-content {
 		font-size: 18px;
 		line-height: 1.3;
 		margin-bottom: 20px;
+	}
+}
+
+.news-page-container {
+	.title-container {
+		margin-bottom: 25px;
+
+		.news-year-selector {
+			float: right;
+		}
+	}
+
+	.post-container {
+		.post {
+			.post-title {
+				font-size: 24px;
+			}
+
+			.post-metadata {
+				font-size: 14px;
+				margin-bottom: 10px;
+			}
+
+			.post-content p {
+				margin-bottom: 7px;
+			}
+		}
 	}
 }
