--- a/app/views/news.html
+++ b/app/views/news.html
@@ -1,1 +1,29 @@
-<div>news</div>
+<div class="news-page-container">
+	<div class="centered-content padded-content">
+		<div class="title-container">
+			<span class="page-title">News</span>
+			<md-input-container class="news-year-selector">
+        <label>Filter By Year</label>
+        <md-select ng-model="selectedYear">
+          <md-option value="2016">2016</md-option>
+          <md-option value="2015">2015</md-option>
+          <md-option value="2014">2014</md-option>
+          <md-option value="2013">2013</md-option>
+        </md-select>
+      </md-input-container>
+    </div>
+
+    <div class="post-container">
+    	<div class="post">
+    		<div class="post-title">Something About How Great Our Team Is</div>
+    		<div class="post-metadata">
+    			<span class="post-author">Post Author</span> - <span class="post-date">1/1/2016 11:11:11</span>
+    		</div>
+    		<div class="post-content">
+    			<p>hjkahsdfasdf</p>
+    			<p>ajfskldfjkasdhfjlaksdf</p>
+    		</div>
+    	</div>
+    </div>
+	</div>
+</div>
