Add email survey dialog to prospective members

--- a/app/views/prospective_members.html
+++ b/app/views/prospective_members.html
@@ -1,1 +1,3 @@
-<div>prospective members</div>
+<div class="centered-content padded-content">
+  <md-button class="md-raised md-primary" ng-click="openEmailSurvey()">Join our Mailing List</md-button>
+</div>
