--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,7 +1,7 @@
 <div class="home-page-container">
 	<div class="image-slider-container">sliding image scroller here</div>
 
-	<div class="social-bar-container" layout="row" layout-align="center center"y>
+	<div class="social-bar-container" layout="row" layout-align="center center">
 		<a class="social-bar facebook-bar" href="https://www.facebook.com/illinoisxctrackclub/"><i class="ion-social-facebook"></i></a>
 		<a class="social-bar twitter-bar" href="https://twitter.com/IlliniTrackClub"><i class="ion-social-twitter"></i></a>
 		<a class="social-bar instagram-bar" href=""><i class="ion-social-instagram-outline"></i></a>
