--- a/app/views/prospective_members.html
+++ b/app/views/prospective_members.html
@@ -1,3 +1,16 @@
-<div class="centered-content padded-content">
-  <md-button class="md-raised md-primary" ng-click="openEmailSurvey()">Join our Mailing List</md-button>
+<div class="prospective-members-page-container">
+  <div class="centered-content padded-content">
+    <div class="title-container">
+      <span class="page-title">Prospective Members</span>
+    </div>
+
+    <div class="page-content extra-vertical-space">
+      <div>Whether you are a senior in High School planning on enrolling at U of I, already attend U of I, are an elite athlete, or a total beginner, ITC/IXC strives to be a welcoming community for you. Please join our mailing list, and read more for more information!</div>
+      <div class="mailing-list extra-vertical-space"><md-button class="md-raised md-primary mailing-list-button" ng-click="openEmailSurvey()">Join our Mailing List</md-button></div>
+
+      <div class="md-headline faq-title">FAQ</div>
+      <div class="faq-question">Who are we?</div>
+      <div class="faq-answer">The Illinois Cross Country and Track and Field Club is an Registered Student Organizations at the University of Illinois. Club members are competitive and focused on improving in their respective events.</div>
+    </div>
+  </div>
 </div>
