Add Records page and Top Performances outline

--- a/app/views/results.html
+++ b/app/views/results.html
@@ -1,1 +1,186 @@
-<div>results</div>
+<div class="results-page-container">
+  <div class="centered-content padded-content">
+    <md-tabs class="tabs" md-dynamic-height>
+      <md-tab label="Records">
+        <div class="md-headline extra-vertical-space">Cross Country</div>
+        <div class="three-column-table record-table">
+          <div class="header row md-body-2">
+            <div class="first-column">Men</div>
+            <div class="second-column">Event</div>
+            <div class="third-column">Women</div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="first-column">Mike Kreiser <span class="record-time">20:25.26</span></div>
+            <div class="second-column">5000m Run</div>
+            <div class="third-column"><span class="record-time">20:25.26</span> Other Person</div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="first-column">Mike Kreiser <span class="record-time">20:25.26</span></div>
+            <div class="second-column">6000m Run</div>
+            <div class="third-column"><span class="record-time">20:25.26</span> Other Person</div>
+          </div>
+          <md-divider></md-divider>
+        </div>
+
+        <div class="md-headline extra-vertical-space">Indoor Track</div>
+        <div class="three-column-table record-table">
+          <div class="header row md-body-2">
+            <div class="first-column">Men</div>
+            <div class="second-column">Event</div>
+            <div class="third-column">Women</div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="first-column">Mike Kreiser <span class="record-time">6.90</span></div>
+            <div class="second-column">60m Run</div>
+            <div class="third-column"><span class="record-time">8.00</span> Other Person</div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="first-column">Mike Kreiser <span class="record-time">17.38</span></div>
+            <div class="second-column">200m Run</div>
+            <div class="third-column"><span class="record-time">20.02</span> Other Person</div>
+          </div>
+          <md-divider></md-divider>
+        </div>
+
+        <div class="md-headline extra-vertical-space">Outdoor Track</div>
+        <div class="three-column-table record-table">
+          <div class="header row md-body-2">
+            <div class="first-column">Men</div>
+            <div class="second-column">Event</div>
+            <div class="third-column">Women</div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="first-column">Mike Kreiser <span class="record-time">8.90</span></div>
+            <div class="second-column">100m Run</div>
+            <div class="third-column"><span class="record-time">10.00</span> Other Person</div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="first-column">Mike Kreiser <span class="record-time">17.38</span></div>
+            <div class="second-column">200m Run</div>
+            <div class="third-column"><span class="record-time">20.02</span> Other Person</div>
+          </div>
+          <md-divider></md-divider>
+        </div>
+      </md-tab>
+      <md-tab label="Top Performances">
+        <div class="md-headline extra-vertical-space">Cross Country</div>
+        <div class="two-column-table performance-table extra-vertical-space">
+          <div class="row md-body-2">5000m Run</div>
+          <md-divider></md-divider>
+          <div class="header row md-body-2">
+            <div class="left-column">Men</div>
+            <div class="right-column">Women</div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="left-column">Mike Kreiser <span class="performance">20:20.20</span></div>
+            <div class="right-column">Other Person <span class="performance">20:20.20</span></div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="left-column">Mike Kreiser <span class="performance">20:20.20</span></div>
+            <div class="right-column">Other Person <span class="performance">20:20.20</span></div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="left-column">Mike Kreiser <span class="performance">20:20.20</span></div>
+            <div class="right-column">Other Person <span class="performance">20:20.20</span></div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="left-column">Mike Kreiser <span class="performance">20:20.20</span></div>
+            <div class="right-column">Other Person <span class="performance">20:20.20</span></div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="left-column">Mike Kreiser <span class="performance">20:20.20</span></div>
+            <div class="right-column">Other Person <span class="performance">20:20.20</span></div>
+          </div>
+          <md-divider></md-divider>
+        </div>
+
+        <div class="md-headline extra-vertical-space">Indoor Track</div>
+        <div class="two-column-table performance-table extra-vertical-space">
+          <div class="row md-body-2">60m Dash</div>
+          <md-divider></md-divider>
+          <div class="header row md-body-2">
+            <div class="left-column">Men</div>
+            <div class="right-column">Women</div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="left-column">Mike Kreiser <span class="performance">6.90</span></div>
+            <div class="right-column">Other Person <span class="performance">6.90</span></div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="left-column">Mike Kreiser <span class="performance">6.90</span></div>
+            <div class="right-column">Other Person <span class="performance">6.90</span></div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="left-column">Mike Kreiser <span class="performance">6.90</span></div>
+            <div class="right-column">Other Person <span class="performance">6.90</span></div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="left-column">Mike Kreiser <span class="performance">6.90</span></div>
+            <div class="right-column">Other Person <span class="performance">6.90</span></div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="left-column">Mike Kreiser <span class="performance">6.90</span></div>
+            <div class="right-column">Other Person <span class="performance">6.90</span></div>
+          </div>
+          <md-divider></md-divider>
+        </div>
+
+        <div class="md-headline extra-vertical-space">Outdoor Track</div>
+        <div class="two-column-table performance-table extra-vertical-space">
+          <div class="row md-body-2">100m Run</div>
+          <md-divider></md-divider>
+          <div class="header row md-body-2">
+            <div class="left-column">Men</div>
+            <div class="right-column">Women</div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="left-column">Mike Kreiser <span class="performance">10.10</span></div>
+            <div class="right-column">Other Person <span class="performance">10.10</span></div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="left-column">Mike Kreiser <span class="performance">10.10</span></div>
+            <div class="right-column">Other Person <span class="performance">10.10</span></div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="left-column">Mike Kreiser <span class="performance">10.10</span></div>
+            <div class="right-column">Other Person <span class="performance">10.10</span></div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="left-column">Mike Kreiser <span class="performance">10.10</span></div>
+            <div class="right-column">Other Person <span class="performance">10.10</span></div>
+          </div>
+          <md-divider></md-divider>
+          <div class="row md-body-1">
+            <div class="left-column">Mike Kreiser <span class="performance">10.10</span></div>
+            <div class="right-column">Other Person <span class="performance">10.10</span></div>
+          </div>
+          <md-divider></md-divider>
+        </div>
+      </md-tab>
+      <md-tab label="Meet Results">
+      </md-tab>
+      <md-tab label="Athlete Search">
+      </md-tab>
+    </md-tabs>
+  </div>
+</div>
