--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -105,8 +105,31 @@ md-menu-content {
 	}
 }
 
+
+.two-column-table {
+	.header {
+		width: 100%;
+	}
+
+	.row {
+		padding: 3px 0;
+		width: 100%;
+	}
+
+	.left-column {
+		float: left;
+		width: 50%;
+	}
+
+	.right-column {
+		display: inline-block;
+		width: 50%;
+	}
+}
+
 .three-column-table {
 	.row {
+		padding: 3px 0;
 		width: 100%;
 	}
 
@@ -242,5 +265,50 @@ md-menu-content {
 
 	.faq-answer {
 		margin-top: 5px;
+	}
+}
+
+.results-page-container {
+	.tabs {
+		max-width: 100%;
+		width: 100%;
+
+		.three-column-table.record-table {
+			.record-time {
+				font-weight: 700;
+			}
+
+			.first-column, .third-column {
+				width: 40%;
+			}
+
+			.first-column {
+				text-align: right;
+
+				.record-time {
+					margin-left: 5px;
+				}
+			}
+
+			.second-column {
+				text-align: center;
+				width: 20%;
+			}
+
+			.third-column {
+				text-align: left;
+
+				.record-time {
+					margin-right: 5px;
+				}
+			}
+		}
+
+		.two-column-table.performance-table {
+			.performance {
+				margin-left: 5px;
+				font-weight: 700;
+			}
+		}
 	}
 }
