Refactor link css

--- a/app/views/clubrelays.html
+++ b/app/views/clubrelays.html
@@ -6,7 +6,7 @@
 
     <div class="page-content extra-vertical-space">
       <div class="md-headline">Event Info</div>
-      <div>Please contact Sean Bruyere, meet coordinator, at <a class="email" href="mailto:sbruyer2@illinois.edu">sbruyer2@illinois.edu</a> or at <a class="email" href="illinoistfclub+meetcoord@gmail.com">illinoistfclub+meetcoord@gmail.com</a></div>
+      <div>Please contact Sean Bruyere, meet coordinator, at <a class="link" href="mailto:sbruyer2@illinois.edu">sbruyer2@illinois.edu</a> or at <a class="link" href="illinoistfclub+meetcoord@gmail.com">illinoistfclub+meetcoord@gmail.com</a></div>
 
       <div class="md-headline extra-vertical-space">Cost</div>
       <div>$10 per individual event and $20 per relay team (team cap at $200)</div>
